--- a/docker/services/frontend/nginx.conf
+++ b/docker/services/frontend/nginx.conf
@@ -66,10 +66,6 @@ http {
         server trading-embedder:3005;
     }
 
-    upstream watchdog-backend {
-        server trading-watchdog:3010;
-    }
-
     server {
         listen 80;
         server_name localhost;
@@ -209,9 +205,11 @@ http {
             proxy_read_timeout 300s;
         }
 
-        # Watchdog Service - Direct Access
+        # Watchdog Service - Direct Access (uses resolver for dynamic DNS)
         location /watchdog/ {
-            proxy_pass http://watchdog-backend/;
+            resolver 127.0.0.11 valid=10s ipv6=off;
+            set $watchdog_upstream trading-watchdog:3010;
+            proxy_pass http://$watchdog_upstream/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -221,6 +219,7 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
             proxy_read_timeout 300s;
+            proxy_connect_timeout 5s;
         }
 
         # =====================================================
