--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
 pydantic>=2.5.0
 pydantic-settings>=2.0.0
+python-multipart>=0.0.6
 
 # HTTP Client
 httpx>=0.25.0
@@ -18,3 +19,6 @@ numpy>=1.24.0
 # Utilities
 loguru>=0.7.0
 python-dotenv>=1.0.0
+pytz>=2024.1
+faiss-cpu>=1.7.0
+pandas>=2.0.0
