--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,9 @@ python-multipart>=0.0.6
 httpx>=0.25.0
 aiohttp>=3.9.0
 
+# Market Data APIs
+twelvedata>=1.2.0
+
 # ML/Deep Learning
 # Note: Thor GPU (sm_110) not yet supported by PyTorch - runs on CPU
 torch>=2.0.0
