--- a/docker/services/frontend/nginx.conf.template
+++ b/docker/services/frontend/nginx.conf.template
@@ -58,6 +58,14 @@ http {
         server trading-tcn-train:3013;
     }
 
+    upstream candlestick-backend {
+        server trading-candlestick:${CANDLESTICK_SERVICE_PORT};
+    }
+
+    upstream candlestick-train-backend {
+        server trading-candlestick-train:3016;
+    }
+
     upstream hmm-backend {
         server trading-hmm:${HMM_SERVICE_PORT};
     }
@@ -167,6 +175,34 @@ http {
         # TCN-Training Service - Direct Access (Training)
         location /tcn-train/ {
             proxy_pass http://tcn-train-backend/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            proxy_read_timeout 600s;  # Long timeout for training requests
+        }
+
+        # Candlestick Pattern Service - Direct Access (Inference)
+        location /candlestick/ {
+            proxy_pass http://candlestick-backend/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            proxy_read_timeout 300s;
+        }
+
+        # Candlestick Training Service - Direct Access (Training)
+        location /candlestick-train/ {
+            proxy_pass http://candlestick-train-backend/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -313,6 +349,17 @@ http {
         # Embedder Service (Port 3005)
         location /api/v1/embeddings/ {
             proxy_pass http://embedder-backend/api/v1/embeddings/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 300s;
+        }
+
+        # Candlestick Pattern Service (Port 3006)
+        location /api/v1/candlestick/ {
+            proxy_pass http://candlestick-backend/api/v1/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
