--- a/docker/services/frontend/nginx.conf.template
+++ b/docker/services/frontend/nginx.conf.template
@@ -70,13 +70,8 @@ http {
         server trading-hmm:${HMM_SERVICE_PORT};
     }
 
-    upstream nhits-train-backend {
-        server trading-nhits-train:3012;
-    }
-
-    upstream hmm-train-backend {
-        server trading-hmm-train:3014;
-    }
+    # Note: nhits-train and hmm-train use dynamic resolver in location blocks
+    # to avoid nginx startup failures when training containers are not running
 
     upstream embedder-backend {
         server trading-embedder:${EMBEDDER_SERVICE_PORT};
@@ -223,8 +218,12 @@ http {
         }
 
         # NHITS-Training Service - Direct Access (Training)
+        # Uses dynamic resolver to allow nginx start without the training container
         location /nhits-train/ {
-            proxy_pass http://nhits-train-backend/;
+            resolver 127.0.0.11 valid=10s ipv6=off;
+            set $nhits_train_upstream trading-nhits-train:3012;
+            rewrite ^/nhits-train/(.*)$ /$1 break;
+            proxy_pass http://$nhits_train_upstream;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -233,12 +232,17 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
-            proxy_read_timeout 600s;  # Long timeout for training requests
+            proxy_read_timeout 600s;
+            proxy_connect_timeout 5s;
         }
 
         # HMM-Training Service - Direct Access (Training)
+        # Uses dynamic resolver to allow nginx start without the training container
         location /hmm-train/ {
-            proxy_pass http://hmm-train-backend/;
+            resolver 127.0.0.11 valid=10s ipv6=off;
+            set $hmm_train_upstream trading-hmm-train:3014;
+            rewrite ^/hmm-train/(.*)$ /$1 break;
+            proxy_pass http://$hmm_train_upstream;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -247,7 +251,8 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
-            proxy_read_timeout 600s;  # Long timeout for training requests
+            proxy_read_timeout 600s;
+            proxy_connect_timeout 5s;
         }
 
         # HMM-Regime Service - Direct Access
